# prospectorERA5

./: .envrc  .gitignore  LICENSE  Makefile  README.md  _quarto.yml  _targets.R  prospectorERA5Land.qmd  pyproject.toml  rproject.toml  spack.yaml  stagecoach_manifest.yml
.devcontainer/: prospectorERA5.def  spack_recipe.def
.spack-env/: view
.spack-env/._view/ujawk3gjhjzwkhag4eh37t2mkqvugvrp/: pyvenv.cfg
.spack-env/._view/ujawk3gjhjzwkhag4eh37t2mkqvugvrp/etc/: bindresvport.blacklist  netconfig  openssl
.spack-env/._view/ujawk3gjhjzwkhag4eh37t2mkqvugvrp/include/: autosprintf.h  bsd  bzlib.h  cblas.h  com_err.h  curl  curses.h  cursesapp.h  cursesf.h  cursesm.h  cursesp.h  cursesw.h  cursslk.h  dbm.h  editline  eti.h  etip.h  expat.h  expat_config.h  expat_external.h  f77blas.h  ffi.h  ffitarget.h  form.h  gdbm.h  gettext-po.h  gssapi  gssapi.h  gssrpc  histedit.h  iconv.h  idn2.h  kadm5  kdb.h  krad.h  krb5  krb5.h  lapack.h  lapacke.h  lapacke_config.h  (+66 more)
.spack-env/._view/ujawk3gjhjzwkhag4eh37t2mkqvugvrp/lib/: gettext  icu  krb5  libasprintf.so.0  libasprintf.so.0.0.0  libatomic.so.1  libbsd.so.0  libbsd.so.0.12.2  libbz2.so.1  libbz2.so.1.0  libbz2.so.1.0.8  libcharset.so.1  libcharset.so.1.0.0  libcom_err.so.3  libcom_err.so.3.0  libcurl.so.4  libcurl.so.4.8.0  libedit.so.0  libedit.so.0.0.76  libexpat.so.1  (+110 more)
_targets/meta/: meta
notebooks/: Pipeline.qmd  download_era5.qmd
notebooks/00_setup/: .setup.qmd.swp  setup.md  setup.qmd
prospectorERA5Land/: __init__.py  dataset.py  features.py  plots.py
prospectorERA5Land/modeling/: predict.py  train.py
slurm/launch/: launch_dev_env.sbatch
slurm/launch/logs/: launch_19890429.err  launch_19890429.out
src/: download_era5.py
(+1257 files in other folders)
