[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "prospectorERA5Land"
version = "0.0.1"
description = "Prospector for the ERA5 Land data Aggregated, Weighted, etc. to the Healthshed in MDG"
authors = [
  { name = "GoldenPlanetaryHealthLab" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "loguru",
    "pip",
    "python-dotenv",
    "ruff",
    "tqdm",
    "typer",
]
requires-python = "~=3.14.0"


[tool.ruff]
line-length = 99
src = ["prospectorERA5Land"]
include = ["pyproject.toml", "prospectorERA5Land/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["prospectorERA5Land"]
force-sort-within-sections = true

