[project]
name = "prospectorERA5Land"
version = "0.0.1"
description = "Prospector for the ERA5 Land data Aggregated, Weighted, etc. to the Healthshed in MDG"
authors = [
  { name = "GoldenPlanetaryHealthLab" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "jupyter>=1.1.1",
    "loguru",
    "pip",
    "python-dotenv",
    "ruff",
    "stagecoach>=0.0.3",
    "tqdm",
    "typer",
]
requires-python = "~=3.14.0"


[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["prospectorERA5Land"]
force-sort-within-sections = true

